--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,26 +1,23 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load static %}
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
 
-    <body>
-        <h1>Rango says...</h1>
+{% block title_block %}
+    About Rango
+{% endblock %}
 
-        <div>
-            here is the about page.
-        </div>
+{% block body_block %}
+    <h1>Rango says...</h1>
 
-        <div>
-            This tutorial has been put together by Ryan.
-        </div>
+    <div>
+        here is the about page.
+    </div>
 
-        <div>
-            <a href="/rango/">index</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
-        </div>
+    <div>
+        This tutorial has been put together by Ryan.
+    </div>
 
-    </body>
-</html>
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+    </div>
+{% endblock %}
