--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,6 +15,10 @@
     <div>
         This tutorial has been put together by Ryan.
     </div>
+    
+    <div>
+        <strong>Visits: {{ visits }}</strong>
+    </div>
 
     <div>
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
